--- a/.tidyallrc
+++ b/.tidyallrc
@@ -2,7 +2,7 @@
 select = **/*.java
 
 [PerlTidy]
-argv = -ci=4 -bl -cti=0
+argv = -ci=4 -bl -cti=0 --character-encoding=none
 ignore = rinutils/**/* **/scripts/err-on-unbuilt-executable.pl **/{cmpdigest,valgrind,verify}--*.t
 select = **/*.{pl,pm,t}
 
